objects/Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Coupon_Used__c</fullName>
        <label>Coupon Used</label>
        <summaryForeignKey>Cart__c.Coupon__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expired_In_Time__c</fullName>
        <label>Expired In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <formula>NOW()&gt;Expired_In_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Total_Quantity__c - Coupon_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>